--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
@@ -18,8 +19,9 @@
     "@mui/material": "^6.3.1",
     "bootstrap": "^5.3.3",
     "next": "15.1.3",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.7",
-    "react-dom": "^19.0.0"
+    "react-dom": "^18.3.1"
   }
 }
